# massreadings-opds

./: README.md  pyproject.toml
.github/workflows/: deploy-pages.yml
docs/: index.html  opds-daily.xml  opds-special-optional.xml  opds-sunday.xml  opds.xml
docs/books/: 2026-05-26-memorial-of-saint-philip-neri-priest.epub  2026-05-27-wednesday-of-the-eighth-week-in-ordinary-time.epub  2026-05-31-the-solemnity-of-the-most-holy-trinity.epub
src/usccb_to_epub/: __init__.py  cli.py  epub.py  scraper.py  server.py  sync.py
src/usccb_to_epub.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
