[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "usccb-to-epub"
version = "0.1.0"
description = "Scrape USCCB daily mass readings, build EPUB files, and serve them through OPDS"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12",
  "curl-cffi>=0.15.0",
  "Pillow>=10.0",
]
authors = [{ name = "GitHub Copilot" }]

[project.scripts]
usccb-to-epub = "usccb_to_epub.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
